k8s/workload.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  dev

---

apiVersion: v1
kind: Namespace
metadata:
  name:  development

---

apiVersion: v1
kind: Namespace
metadata:
  name:  staging

---

apiVersion: v1
kind: Namespace
metadata:
  name:  production


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-backend-v1
  namespace: dev
spec:
  selector:
    matchLabels:
      app: dummy-backend-v1
  template:
    metadata:
      labels:
        app: dummy-backend-v1
    spec:
      containers:
      - name: dummy-backend-v1
        image: alsaheem/dummy-backend:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-backend-v2
  namespace: dev
spec:
  selector:
    matchLabels:
      app: dummy-backend-v2
  template:
    metadata:
      labels:
        app: dummy-backend-v2
    spec:
      containers:
      - name: dummy-backend-v2
        image: alsaheem/dummy-backend:v2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-frontend
  namespace: dev
spec:
  selector:
    matchLabels:
      app: dummy-frontend
  template:
    metadata:
      labels:
        app: dummy-frontend
    spec:
      containers:
      - name: dummy-frontend
        image: alsaheem/dummy-frontend
        ports:
        - containerPort: 3000


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-ingress
  namespace: dev
  annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
      kubernetes.io/ingress.class: nginx
      service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
      service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
      service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
      service.beta.kubernetes.io/aws-load-balancer-type: nlb
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /backend/v1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service-v1
            port:
              number: 80
  - http:
      paths:
      - path: /backend/v2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port:
              number: 80

---

kind: Service
apiVersion: v1
metadata:
  name:  backend-service-v1
  namespace: dev
spec:
  selector:
    app:  dummy-backend-v1
  type:  LoadBalancer
  ports:
  - name:  http
    protocol: TCP
    port:  80
    targetPort:  5000

---

kind: Service
apiVersion: v1
metadata:
  name:  backend-service-v2
  namespace: dev
spec:
  selector:
    app:  dummy-backend-v2
  type:  LoadBalancer
  ports:
  - name:  http
    protocol: TCP
    port:  80
    targetPort:  5000

---

kind: Service
apiVersion: v1
metadata:
  name:  frontend-service
  namespace: dev
spec:
  selector:
    app:  dummy-frontend
  type:  LoadBalancer
  ports:
  - name:  http
    protocol: TCP
    port:  80
    targetPort:  3000
